# NNHessian

./: LICENSE  README.md  pyproject.toml
src/: TestOlmoExperiment.py
src/nnhessian/: __init__.py  calculator.py
