[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nnhessian" 
version = "0.1.0"
description = "PyTorch-based neural network Hessian computation library"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Your Name", email = "zs.zhang0120@gmail.com"}]
requires-python = ">=3.8"
dependencies = [
    "torch>=1.10", 
    "numpy"
]

[project.urls]
"Homepage" = "https://github.com/VirtuosoResearch/NNHessian"
"Source" = "https://github.com/VirtuosoResearch/NNHessian"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
